--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.18.1
   shimmer: ^3.0.0
   modal_bottom_sheet: ^3.0.0
+  image_picker: ^1.1.2
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
